--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 	text-align: center;
 	width: 100%;
 	box-sizing: border-box;
+	color: white;
 }
 
 .container {
@@ -45,13 +46,17 @@ div.player.card {
 #game_screen {
 	display: flex;
 	flex-direction: column;
-	background-color: cadetblue;
-	height: 95vh;
-	width: 100vw;
+	justify-content: space-evenly !important;
+	background-color: rgba(88, 70, 29, 0.493);
+	height: 90vh;
+	max-width: 100%;
+	min-width: 100%;
+	padding: 0 !important;
+	margin: 0 !important;
 }
 
 #encounter_screen {
-	height: 50%;
+	max-height: 50%;
 	display: flex;
 	justify-content: center;
 	align-content: flex-start;
@@ -75,19 +80,43 @@ div.player.card {
 }
 
 #text_log {
-	position: relative;
+	/* position: relative; */
 	display: flex;
 	flex-direction: column;
-	overflow-y: scroll;
-	float: right;
-	width: 35%;
+	justify-content: space-between;
+	align-items: flex-end;
+	overflow-x: hidden;
+	/* float: right; */
+	width: 90%;
 	height: 100%;
+	color: white;
 	padding: 0 !important;
+	margin: 0 !important;
+	/* margin-top: 2rem !important; */
+}
+
+#text_log_messages {
+	height: 80%;
+	overflow-y: scroll;
+	width: 100%;
+	/* padding: 0 !important;
+	margin: 0 !important; */
+	padding-top: 0.2em;
+	padding-left: 0;
+	padding-right: 0;
+	margin: 0 !important;
+}
+
+#chat_submit {
+	padding: 0 !important;
+	margin: 0 !important;
+	margin-top: 0.5rem !important;
 }
 
 #player_menu {
 	border: solid white 1px;
 	display: flex;
+	justify-content: space-between;
 	height: 40%;
 	width: 100%;
 	margin: 1rem !important;
@@ -100,7 +129,10 @@ div.player.card {
 
 #player_context_menu {
 	display: flex;
-	width: 70%;
+	align-self: center !important;
+	justify-self: center !important;
+	width: fit-content !important;
+	height: 100% !important;
 	padding: 0 !important;
 	margin: 0 1rem !important;
 }
@@ -114,8 +146,11 @@ div.player.card {
 #player_action_menu {
 	display: flex;
 	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	max-height: 100%;
 	margin: 0 !important;
-	padding: 0 2rem !important;
+	padding: 0 !important;
 }
 
 #player_action_menu > * {
@@ -124,6 +159,7 @@ div.player.card {
 
 #action_buttons {
 	display: flex;
+	flex-direction: column;
 	justify-content: space-between;
 }
 
@@ -153,28 +189,25 @@ div.player.card {
 	margin: 0 1rem;
 }
 
-.Navbar{
-  width: 100%;
-  height: 75px;
+.Navbar {
+	width: 100%;
+	height: 75px;
 }
 
-.main-footer{
-  background-color: #222529;
-  color: whitesmoke;
-
-
+.main-footer {
+	background-color: #222529;
+	color: whitesmoke;
 }
 
-#column2{
+#column2 {
 	align-content: right;
-	
 }
 
-.footer{
+.footer {
 	width: 100vw;
 }
 
-.ul-footer{
+.ul-footer {
 	display: flex;
 	justify-content: space-between;
 }
@@ -183,14 +216,70 @@ div.player.card {
 	font-size: 14px;
 }
 
-.footer-container{
+.footer-container {
 	margin: 0;
 }
 #root > div.footer.container {
 	margin-left: 0px;
 }
 
-.footer.container{
+.footer.container {
 	margin: 0 !important;
 	padding: 0 !important;
+}
+
+.party-messages {
+	margin: 0 !important;
+	padding: 0 !important;
+	max-height: 100% !important;
+	height: 100% !important;
+	overflow-y: scroll;
+}
+
+.gold {
+	color: goldenrod;
+}
+
+.partyIn {
+	margin: 0 !important;
+	padding: 0 !important;
+}
+
+.party-container {
+	margin: 0 !important;
+	padding: 0 !important;
+	max-height: 100% !important;
+	height: 100% !important;
+}
+
+.coloredTextLog {
+	color: orange;
+}
+
+#text-container {
+	display: flex;
+	flex-direction: column;
+}
+
+.card.player {
+	background-color: rgb(67, 47, 47);
+	border-color: rgb(255, 255, 255);
+}
+
+.btn {
+	background-color: #222529 !important;
+	border-color: orange !important;
+}
+
+.welcome {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	height: 66.4vh;
+}
+
+.App {
+	height: 100vh;
+	/* overflow-y: hidden; */
+	padding: 0;
 }
